# django-online-store

./: pyproject.toml
mainapp/: README.md
mainapp/api/: permissions.py  serializers.py  urls.py  views.py
mainapp/authapp/: forms.py  models.py  tasks.py  urls.py  views.py
mainapp/authapp/migrations/: 0001_initial.py  0002_alter_user_activation_key_expires.py  0003_alter_user_activation_key_expires.py  0004_alter_user_activation_key_expires.py  0005_alter_user_activation_key_expires_alter_user_age.py  0006_remove_user_age_alter_user_activation_key_expires.py  0007_alter_user_activation_key_expires.py  0008_alter_user_activation_key_expires.py  0009_alter_user_activation_key_expires.py  0010_alter_user_activation_key_expires.py  0011_alter_user_activation_key_expires.py  0012_alter_user_activation_key_expires.py  0013_alter_user_activation_key_expires.py  0014_alter_user_activation_key_expires.py  0015_alter_user_activation_key_expires.py  0016_alter_user_activation_key_expires.py  0017_alter_user_activation_key_expires.py  0018_alter_user_activation_key_expires.py  0019_alter_user_activation_key_expires.py  0020_alter_user_activation_key_expires.py  0021_alter_user_activation_key_expires.py  0022_alter_user_activation_key_expires.py  0023_alter_user_activation_key_expires.py  (+12 more)
mainapp/cartapp/: admin.py  models.py  urls.py  views.py
mainapp/core/: context_processors.py  exceptions.py  filters.py  json_loggin_config.py  view_logger.py
mainapp/mainapp/: .env_template  celery.py  settings.py  urls.py  views.py
mainapp/orderapp/: admin.py  forms.py  models.py  urls.py  views.py
mainapp/productapp/: admin.py  context_processors.py  models.py  urls.py  views.py
mainapp/wishapp/: admin.py  apps.py  models.py  urls.py  views.py
(+59 files in other folders)
