[tool.poetry]
name = "django_shop"
version = "0.1.0"
description = ""
authors = ["Daniil <sidorenkodk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
ipython = "^8.4.0"
psycopg2 = "^2.9.3"
postgres = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
