[tool.poetry]
name = "django_shop"
version = "0.1.0"
description = ""
authors = ["Daniil <sidorenkodk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
ipython = "^8.4.0"
psycopg2 = "^2.9.3"
postgres = "^4.0"
Pillow = "^9.2.0"
gender = "^0.0.33"
products = "^1.0.0"
social-auth-app-django = "^5.0.0"
now = "^0.0.6"
django-environ = "^0.9.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
